# arena-smart-contracts

./: .env  .gitignore  Cargo.toml  README.md  justfile
.cargo/: config
.github/workflows/: basic.yml
contracts/agon-core/: Cargo.toml  README
contracts/agon-core/schema/: agon-core.json
contracts/agon-core/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  models.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/agon-escrow/: Cargo.toml  README
contracts/agon-escrow/.cargo/: config
contracts/agon-escrow/schema/: agon-escrow.json
contracts/agon-escrow/src/: contract.rs  error.rs  execute.rs  lib.rs  models.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/agon-tournament-module/: Cargo.toml
contracts/agon-tournament-module/src/: msg.rs
contracts/arena-competition-enrollment/: Cargo.toml
contracts/arena-competition-enrollment/.cargo/: config.toml
contracts/arena-competition-enrollment/schema/: arena-competition-enrollment.json
contracts/arena-competition-enrollment/src/: contract.rs  error.rs  execute.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs
contracts/arena-core/: Cargo.toml  README  README.md
contracts/arena-core/.cargo/: config.toml
contracts/arena-core/schema/: agon-core.json  arena-core.json
contracts/arena-core/src/: contract.rs  error.rs  execute.rs  lib.rs  migrate.rs  models.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/arena-core/src/tests/: app.rs  core.rs  helpers.rs  leagues.rs  mod.rs  wagers.rs
contracts/arena-discord-identity/: Cargo.toml  README.md
contracts/arena-discord-identity/.cargo/: config.toml
contracts/arena-discord-identity/schema/: arena-discord-identity.json
contracts/arena-discord-identity/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/arena-escrow/: Cargo.toml  README.md
contracts/arena-escrow/.cargo/: config
contracts/arena-escrow/schema/: arena-escrow.json
contracts/arena-escrow/src/: contract.rs  error.rs  execute.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/arena-fundraise/: Cargo.toml  README.md
contracts/arena-fundraise/.cargo/: config
contracts/arena-fundraise/schema/: arena-fundraise.json
contracts/arena-fundraise/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/arena-group/: Cargo.toml
contracts/arena-group/.cargo/: config.toml
contracts/arena-group/schema/: arena-group.json
contracts/arena-group/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/arena-league-module/: Cargo.toml  README.md
contracts/arena-league-module/.cargo/: config
contracts/arena-league-module/schema/: arena-league-module.json
contracts/arena-league-module/src/: contract.rs  error.rs  execute.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs
contracts/arena-payment-registry/: Cargo.toml  README.md
contracts/arena-payment-registry/.cargo/: config.toml
contracts/arena-payment-registry/schema/: arena-payment-registry.json
contracts/arena-payment-registry/src/: contract.rs  execute.rs  query.rs  state.rs
contracts/arena-token-gateway/: Cargo.toml  README.md
contracts/arena-token-gateway/.cargo/: config.toml
contracts/arena-token-gateway/schema/: arena-token-gateway.json
contracts/arena-token-gateway/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/arena-tournament-module/: Cargo.toml  README.md
contracts/arena-tournament-module/.cargo/: config.toml
contracts/arena-tournament-module/schema/: arena-tournament-module.json
contracts/arena-tournament-module/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  nested_array.rs  query.rs  state.rs
contracts/arena-wager-module/: Cargo.toml  README.md
contracts/arena-wager-module/schema/: arena-wager-module.json
contracts/arena-wager-module/src/: contract.rs  msg.rs
contracts/cw4-disbursement/: Cargo.toml  README
contracts/cw4-disbursement/schema/: cw4-disbursement.json
contracts/cw4-disbursement/src/: contract.rs  error.rs  execute.rs  lib.rs  model.rs  msg.rs  query.rs  state.rs
scripts/: Cargo.toml  check.bat  check.sh  gen.bat  gen.sh  optimize.bat  optimize.sh  package-lock.json  package.json  schema.sh  state.json  tsconfig.json  udeps.sh
scripts/src/: arena.rs  codegen.ts  dao_dao.rs  deploy.rs  main.rs
scripts/src/tests/: arena_competition_enrollment.rs  arena_core.rs  arena_league_module.rs  arena_payment_registry.rs  arena_token_gateway.rs  arena_tournament_module.rs  arena_wager_module.rs  deploy.rs  helpers.rs  mod.rs
test-contracts/agon-sudo/: Cargo.toml
test-contracts/agon-sudo/src/: tests.rs
ts-codegen/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ts-codegen/src/: codegen.ts
