[workspace]
members = [
	"contracts/*",
	"packages/*",
	]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/Arena-DAO/arena-smart-contracts"
version = "0.7.5"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = "1.4.0"
cosmwasm-storage = "1.4.0"
cosmwasm-schema = "1.4.0"
cw-utils = "1.0.1"
thiserror = "1.0.48"
cw-storage-plus = "1.1.0"
cw-multi-test = "0.16.5" 
cw2 = "1.1.0"
cw20 = "1.1.0"
cw721 = "0.18.0"
cw20-base = "1.1.0"
cw721-base = "0.18"
anyhow = "1.0.75"
cw4-group = "1.1.0"
rand = "0.8.5"
cw4 = "1.1.0"
serde = { version = "1.0.188", default-features = false, features = ["derive"]}
getrandom = { version = "0.2.10", features = ["js"] }
bnum = "0.8.0"
cw-paginate = "0.2.1"
cw-ownable = "0.5.1"

#arena_dao dependencies
cw-competition-base = { path = "./packages/cw-competition-base", features = ["library"] }
cw-balance = { path = "./packages/cw-balance", features = ["library"] }
arena-testing = { path = "./packages/arena-testing" }
cw-competition = { path = "./packages/cw-competition" }
arena-core-interface = { path = "./packages/arena-core-interface" }

arena-core = { path = "./contracts/arena-core" }
arena-escrow = { path = "./contracts/arena-escrow" }
arena-wager-module = { path = "./contracts/arena-wager-module" }

#dao dependencies
dao-interface = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main" }
dao-proposal-multiple = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"]}
dao-proposal-single = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"]}
dao-pre-propose-single = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"]}
dao-voting = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main" }
dao-voting-cw4 = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"]}
dao-proposal-sudo = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"]}
dao-pre-propose-base = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main", features = ["library"] }
dao-testing = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "main" }