[workspace]
members = ["contracts/*", "packages/*", "scripts"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
repository = "https://github.com/Arena-DAO/arena-smart-contracts"
version = "2.1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "1.5.7", features = ["cosmwasm_1_4"] }
cosmwasm-storage = "1.5.2"
cosmwasm-schema = "1.5.7"
cw-utils = "1.0.3"
thiserror = "1.0.63"
cw-storage-plus = "1.2.0"
cw-multi-test = { version = "1.2.0", features = ["cosmwasm_1_4"] }
cw2 = "1.1.2"
cw20 = "1.1.2"
cw721 = "0.18.0"
cw20-base = { version = "1.1.2", features = ["library"] }
cw721-base = { version = "0.18", features = ["library"] }
anyhow = "1.0.86"
cw4-group = { version = "1.1.2", features = ["library"] }
rand = "0.8.5"
cw4 = "1.1.2"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
cw-paginate = "0.2.1"
cw-ownable = "0.5.1"
cw-address-like = "1.0.4"
itertools = "0.13.0"
cw-orch = "0.24.1"
semver = "1.0.23"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde_json = "1.0.128"
sha2 = "0.10.8"

#arena_dao dependencies
cw-competition-base = { path = "./packages/cw-competition-base" }
cw-balance = { path = "./packages/cw-balance" }
arena-interface = { path = "./packages/arena-interface" }
orch-interface = { path = "./packages/orch-interface" }
glicko_2 = { path = "./packages/glicko_2" }

arena-core = { path = "./contracts/arena-core" }
arena-discord-identity = { path = "./contracts/arena-discord-identity" }
arena-escrow = { path = "./contracts/arena-escrow" }
arena-group = { path = "./contracts/arena-group" }
arena-wager-module = { path = "./contracts/arena-wager-module" }
arena-league-module = { path = "./contracts/arena-league-module" }
arena-tournament-module = { path = "./contracts/arena-tournament-module" }
arena-competition-enrollment = { path = "./contracts/arena-competition-enrollment" }
arena-token-gateway = { path = "./contracts/arena-token-gateway" }
arena-payment-registry = { path = "./contracts/arena-payment-registry" }

#dao dependencies
dao-interface = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena" }
dao-cw-orch = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena" }
cw-vesting = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
cw-payroll-factory = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-proposal-multiple = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-proposal-single = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-pre-propose-single = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-voting = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena" }
dao-voting-cw4 = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-proposal-sudo = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-pre-propose-base = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
dao-dao-core = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
cw-abc = { git = "https://github.com/Arena-DAO/dao-contracts", branch = "fork/v2.5.0-arena", features = [
	"library",
] }
