[package]
name = "scripts"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cw-orch = { workspace = true, features = ["daemon"] }
arena-tournament-module = { workspace = true }
arena-wager-module = { workspace = true }
arena-league-module = { workspace = true }
arena-core = { workspace = true }
arena-interface = { workspace = true }
arena-escrow = { workspace = true }
cosmwasm-std = { workspace = true }
orch-interface = { workspace = true }
cw-utils = { workspace = true }
cw-balance = { workspace = true }
dao-cw-orch = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "feature/cw-orch-interface" }
itertools = { workspace = true }
arena-competition-enrollment = { workspace = true }

# scripts specific
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }

# cw-orch enabled DAO DAO deps
[dev-dependencies]
dao-interface-master = { package = "dao-interface", git = "https://github.com/DA0-DA0/dao-contracts", branch = "development" }
dao-voting-master = { package = "dao-voting", git = "https://github.com/DA0-DA0/dao-contracts", branch = "development" }
dao-voting-cw4-master = { package = "dao-voting-cw4", git = "https://github.com/DA0-DA0/dao-contracts", branch = "development" }
dao-interface = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "feature/cw-orch-interface" }
dao-proposal-sudo = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "feature/cw-orch-interface", features = [
    "library",
] }
dao-proposal-single = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "feature/cw-orch-interface", features = [
    "library",
] }
dao-voting = { git = "https://github.com/DA0-DA0/dao-contracts", branch = "feature/cw-orch-interface" }
