[package]
name = "scripts"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cw-orch = { workspace = true, features = ["daemon"] }
arena-tournament-module = { workspace = true }
arena-wager-module = { workspace = true }
arena-league-module = { workspace = true }
arena-core = { workspace = true }
arena-interface = { workspace = true }
arena-escrow = { workspace = true }
cosmwasm-std = { workspace = true }
orch-interface = { workspace = true }
cw-utils = { workspace = true }
cw-balance = { workspace = true }
dao-cw-orch = { workspace = true }
itertools = { workspace = true }
arena-competition-enrollment = { workspace = true }
arena-token-gateway = { workspace = true }
arena-payment-registry = { workspace = true }
cosmwasm-schema = { workspace = true }
serde_json = { workspace = true }

# DA0 DA0
dao-interface = { workspace = true }
dao-voting = { workspace = true }
dao-proposal-sudo = { workspace = true }
dao-proposal-single = { workspace = true }
cw-vesting = { workspace = true }
cw-payroll-factory = { workspace = true }
dao-voting-cw4 = { workspace = true }
cw4 = { workspace = true }

# scripts specific
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }
cw-orch-clone-testing = "0.6.4"
