[package]
name = "agon-escrow"
version = "1.0.0"
authors = ["ismellike <glopez11193@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw-utils = { workspace = true }
cw-controllers = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-balance = { workspace = true }
cw-competition = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
agon-testing = { workspace = true }