[package]
name = "arena-core"
authors = ["ismellike <glopez11193@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
getrandom = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-competition = { workspace = true }
dao-interface = { workspace = true }
dao-voting = { workspace = true }
dao-voting-cw4 = { workspace = true }
dao-pre-propose-base = { workspace = true }
cw-paginate = { workspace = true }
arena-core-interface = { workspace = true }

[dev-dependencies]
dao-proposal-single = { workspace = true }
cw-multi-test = { workspace = true }
dao-testing = { workspace = true }
arena-testing = { workspace = true }
dao-voting = { workspace = true }
cw-utils = { workspace = true }
cw-utils-v16 = { version = "0.16", package ="cw-utils" }
cw20 = "0.16"
dao-proposal-sudo = { workspace = true }
dao-proposal-multiple = { workspace = true }
arena-wager-module = { workspace = true }
arena-escrow = { workspace = true }
cw4-group = { workspace = true }
cw-balance = { workspace = true }
cw4 = "0.16"