[package]
name = "arena-core"
authors = ["Gabe Lopez <ismellike@users.noreply.github.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-competition = { workspace = true }
dao-interface = { workspace = true }
dao-voting = { workspace = true }
dao-pre-propose-base = { workspace = true }
cw-paginate = { workspace = true }
arena-core-interface = { workspace = true }
glicko_2 = { workspace = true }

[dev-dependencies]
dao-proposal-single = { workspace = true }
cw-multi-test = { workspace = true }
arena-testing = { workspace = true }
dao-voting = { workspace = true }
cw-utils = { workspace = true }
cw-utils-v16 = { version = "0.16", package = "cw-utils" }
cw20 = "0.16"
dao-proposal-sudo = { workspace = true }
dao-pre-propose-single = { workspace = true }
arena-wager-module = { workspace = true }
arena-escrow = { workspace = true }
cw4-group = { workspace = true }
cw-balance = { workspace = true }
cw4 = "0.16"
dao-voting-cw4 = { workspace = true }
arena-league-module = { workspace = true }
