[package]
name = "arena-escrow"
authors = ["ismellike <glopez11193@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-balance = { workspace = true }
cw-competition = { workspace = true }
cw-paginate = { workspace = true }
cw-ownable = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
arena-testing = { workspace = true }
cw20-base = { workspace = true }
cw721-base = { workspace = true }