[package]
name = "arena-escrow"
authors = ["Gabe Lopez <ismellike@users.noreply.github.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-balance = { workspace = true }
cw-paginate = { workspace = true }
cw-ownable = { workspace = true }
arena-interface = { workspace = true }
cw-orch = { workspace = true }