[package]
name = "arena-tournament-module"
authors = ["Gabe Lopez <ismellike@users.noreply.github.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-competition = { workspace = true }
cw-competition-base = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
arena-core-interface = { workspace = true }
thiserror = { workspace = true }
dao-interface = { workspace = true }
cw-ownable = { workspace = true }
itertools = { workspace = true }
cw-balance = { workspace = true }
cw-paginate = { workspace = true }
cw-orch = { workspace = true }
