[package]
name = "arena-wager-module"
authors = ["Gabe Lopez <ismellike@users.noreply.github.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-competition-base = { workspace = true }
arena-interface = { workspace = true }
itertools = { workspace = true }
