[package]
name = "cw4-disbursement"
version = "0.1.0"
authors = ["ismellike <glopez11193@gmail.com>"]
edition = "2018"
description = "Extension of a cw4 group for handling payment splitting"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw4 = { workspace = true }
cw4-group = { workspace = true }
cw-disbursement = { workspace = true }
cw-tokens = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dao-interface = { workspace = true }
dao-macros = { workspace = true }
cw-paginate = { workspace = true }
