[package]
name = "agon-sudo"
version = "0.2.0"
authors = ["ismellike <glopez11193@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-controllers = { workspace = true }
cw-utils = { workspace = true }
dao-interface = { workspace = true }
cw-disbursement = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw20-base = { workspace = true }
cw721-base = { workspace = true }
cw4-disbursement = { workspace = true }
dao-core = { workspace = true }
dao-proposal-sudo = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
cw20-stake = { workspace = true }
cw-multi-test = { workspace = true }

